--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
 
-    <title>Hello Phoenix!</title>
+
+    <title>Hello Phoeix!</title>
     <link rel="stylesheet" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
 
