--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <script src="https://cdn.bmalum.com/jquery/2.1.4/jquery.js"></script>
     <script src="https://cdn.bmalum.com/semantic-ui/2.1/semantic.js"></script>
     <script src="https://cdn.bmalum.com/angularjs/1.4.7/angular.js"></script>
