--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -10,15 +10,15 @@
     <meta name="author" content="">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="white">
-    <script src="https://cdn.bmalum.com/jquery/2.1.4/jquery.js"></script>
-    <script src="https://cdn.bmalum.com/semantic-ui/2.1/semantic.js"></script>
-    <script src="https://cdn.bmalum.com/angularjs/1.4.7/angular.js"></script>
-    <script src="http://cdn.bmalum.com/angularjs/1.4.7/angular-animate.js"></script>
-    <script src="http://cdn.bmalum.com/angular-ui/0.2.15/angular-ui-router.js"></script>
-    <script src="http://cdn.bmalum.com/angular-scroll/angular-scroll.js"></script>
+    <script src="https://212.47.242.176/jquery/2.1.4/jquery.js"></script>
+    <script src="https://212.47.242.176/semantic-ui/2.1/semantic.js"></script>
+    <script src="https://212.47.242.176/angularjs/1.4.7/angular.js"></script>
+    <script src="http://212.47.242.176/angularjs/1.4.7/angular-animate.js"></script>
+    <script src="http://212.47.242.176/angular-ui/0.2.15/angular-ui-router.js"></script>
+    <script src="http://212.47.242.176/angular-scroll/angular-scroll.js"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
-    <link rel="stylesheet" type="text/css" href="http://cdn.bmalum.com/semantic-ui/2.1/semantic.css">
-    <link rel="stylesheet" type="text/css" href="http://cdn.bmalum.com/animate-css/animate.css">
+    <link rel="stylesheet" type="text/css" href="http://212.47.242.176/semantic-ui/2.1/semantic.css">
+    <link rel="stylesheet" type="text/css" href="http://212.47.242.176/animate-css/animate.css">
     <link rel="stylesheet" type="text/css" href="<%= static_path(@conn, "/css/app.css") %>">
   </head>
   <body>
