--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-     <link rel="apple-touch-icon" href="http://cdn.bmalum.net/bmalum/logos/Icon-76%402x.png" >
+     <link rel="apple-touch-icon" href="http://212.47.242.176/bmalum/logos/Icon-76%402x.png" >
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="apple-mobile-web-app-capable" content="yes">
